--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/burieberry/neighborhood-map-project#readme",
   "dependencies": {
+    "default-passive-events": "^0.1.1",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
     "knockout": "^3.4.2",
